# Ektor

./: .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt  SampleClass.cpp  SampleClass.hpp
demo/Memory/: CMakeLists.txt  FrameAllocatorExample.cpp  StackAllocatorExample.cpp
include/Ek/Gfx/: Event.hpp  Keyboard.hpp  Mouse.hpp  Window.hpp
include/Ek/Memory/: FrameAllocator.hpp  Memory.hpp  StackAllocator.hpp
include/Ek/Utils/: Config.hpp  Logger.hpp  Maths.hpp
notes/: 0-index.md  1-memory.md  2-threading.md
src/Ek/: CMakeLists.txt
src/Ek/Gfx/: CMakeLists.txt  IWindowImpl.cpp  IWindowImpl.hpp  Window.cpp
src/Ek/Gfx/Unix/: WindowImplX11.cpp  WindowImplX11.hpp
src/Ek/Memory/: CMakeLists.txt  FrameAllocator.cpp  StackAllocator.cpp
src/Ek/Utils/: CMakeLists.txt  Logger.cpp
